--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
   <section class="bottom">
     <div class="image">
       <img src="https://image.flaticon.com/icons/svg/2979/2979348.svg" alt="Use fire carefully">
-      <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for current fire restrictions.</p>
+      <p>Fire is a natural and essential<br>part of Yosemite. We manage fire<br>carefully and study how it<br>interacts with the park’s<br>ecosystems. This blog provides<br>updates about fires in Yosemite.<br>Check for <span style="font-weight:bold;">current fire<br>restrictions.</span></p>
     </div>
     <div class="image">
       <img src="https://image.flaticon.com/icons/svg/820/820374.svg" alt="Make Reservations for lodging">
-      <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the park entrance fee upon arrival (there's no need to pay it in advance).</p>
+      <p>We strongly recommend that you make<br>reservations for lodging, camping,<br>and backpacking. You can pay the<br><span style="font-weight:bold;">park entrance fee</span> upon arrival<br>(there's no need to pay it in<br>advance).</p>
     </div>
   </section>
   <footer class="foot">
